# PEA_zad3

./: CMakeLists.txt
headers/: Algorithm.h  Genetic.h  Greedy.h  SimulatedAnnealing.h  TabuSearch.h
sources/: Algorithm.cpp  Genetic.cpp  Greedy.cpp  SimulatedAnnealing.cpp  TabuSearch.cpp  main.cpp
